--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
     "http-proxy-middleware": "^2.0.6",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.354.0",
